# testability-doctor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_OPEN_SOURCE_REPORT.md  LICENSE  OPEN_SOURCE_READY_REPORT.md  PRODUCT_REPORT.md  QUICKSTART.md  README.md  SECURITY.md  package-release.sh  pyproject.toml  testability_doctor.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: ai-agent-workflow.md  config-reference.md  detection-model.md  docker-testability.md  examples.md
examples/: generated-config.json  sample-report.md
examples/external-env/: README.md
examples/go-module/: go.mod  main_test.go
examples/node-no-lockfile/: package.json
examples/node-package-lock/: package-lock.json  package.json
examples/python-pytest/: pyproject.toml
examples/rust-cargo/: Cargo.toml
examples/rust-cargo/src/: lib.rs
examples/swift-unsupported/: Package.swift
tests/: test_testability_doctor.py
